fix layout issue in vc u3

--- a/h5c/vic/src/vic-webapp/src/app/create-vch-wizard/create-vch-wizard.component.scss
+++ b/h5c/vic/src/vic-webapp/src/app/create-vch-wizard/create-vch-wizard.component.scss
@@ -1,5 +1,5 @@
 .clr-wizard--inline {
-  height: 300px;
+  height: 100vh;
 }
 .spinner {
   z-index: 10000;
